@@ -1,4 +1,4 @@
-#EXTRA_DIST = \
-#	codeset.m4 gettext.m4 glibc21.m4 iconv.m4 isc-posix.m4 \
-#	lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 progtest.m4 \
-#	autogen.sh aclocal-include.m4 gtkdoc.m4
+EXTRA_DIST = \
+	codeset.m4 gettext.m4 glibc21.m4 iconv.m4 isc-posix.m4 \
+	lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 progtest.m4 \
+	autogen.sh aclocal-include.m4
