@@ -1,0 +1,31 @@
+/*
+ *  libzvbi test
+ *
+ *  Copyright (C) 2002 Michael H. Schimek
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+
+/* $Id: cpptest.cc,v 1.1 2002-10-02 02:29:28 mschimek Exp $ */
+
+#include "libzvbi.h"
+
+/* For now just to see if it compiles. */
+
+int
+main (int argc, char **argv)
+{
+	return 0;
+}
